--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/lunafromthemoon/RenJS-V2@master/dist/renjs.min.js"></script>
 		<script src="boot.js"></script>
 	</head>
-	<body style="margin-top: 0px; margin-bottom: 0px; margin-left: 0px;margin-right: 0px;">
+	<body style="margin-top: 0px; margin-bottom: 0px; margin-left: 0px;margin-right: 0px; background-color: #000000; height: 600px;
+    width: 800px;">
 	</body>
 
 </html>
